force-app/main/default/objects/Sensitive_Data_Field__c/Sensitive_Data_Field__c.object-meta.xml
<CustomObject>
    <label>Sensitive Data Field</label>
    <nameField>
        <label>Sensitive Data Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sensitive Data Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>