force-app/main/default/objects/Sensitive_Data_Field__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>