force-app/main/default/objects/Sensitive_Data_Field__c/fields/Help__c.field-meta.xml
<CustomField>
    <fullName>Help__c</fullName>
    <label>Help</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>