force-app/main/default/objects/Sensitive_Data_Field__c/fields/Sensitive_Data_ObjectId__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Data_ObjectId__c</fullName>
    <label>Sensitive Data Object Name</label>
    <referenceTo>Sensitive_Data__c</referenceTo>
    <relationshipName>GDPR_Field</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>